src/z80asm/z80asm2/t/40-syntax/expected/public_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/public_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/public_01.asm...
t/40-syntax/input/public_01.asm:1:7: error: Identifier expected
    public
          ^
t/40-syntax/input/public_01.asm:2:8: error: Identifier expected
    public ,
           ^
t/40-syntax/input/public_01.asm:4:11: error: Identifier expected
    public a1,
              ^
Program: public_01
    Modules:
        Module: public_01 (current)
            Sections:
                Section:  (current)
    Statements:
        SymbolDeclareStmt
            Location: t/40-syntax/input/public_01.asm:3:1
            Type: Public
            Symbols:
                a1 at t/40-syntax/input/public_01.asm:3:8
        SymbolDeclareStmt
            Location: t/40-syntax/input/public_01.asm:5:1
            Type: Public
            Symbols:
                a1 at t/40-syntax/input/public_01.asm:5:8
                a2 at t/40-syntax/input/public_01.asm:5:11
        SymbolDeclareStmt
            Location: t/40-syntax/input/public_01.asm:6:1
            Type: Public
            Symbols:
                a1 at t/40-syntax/input/public_01.asm:6:8
                a2 at t/40-syntax/input/public_01.asm:6:11
                a3 at t/40-syntax/input/public_01.asm:6:14
